[project]
name = "siebert-mlx"
version = "0.6.0"
description = "Classify sentiment in English text with the SiEBERT model on Apple Silicon with MLX."
requires-python = ">=3.12"
dependencies = [
    "mlx",
    "mlx-transformers",
    "python-dotenv",
    "pandas",
    "streamlit",
    "transformers",
]

[dependency-groups]
dev = ["pytest", "ruff", "ty"]
convert = ["safetensors", "torch"]

[tool.uv]
override-dependencies = ["streamlit>=1.34.0,<2.0"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length is owned by `ruff format`

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
