[project]
name = "siebert-mlx"
version = "0.6.0"
description = "Streamlit application for sentiment classification in English text using SiEBERT on Apple Silicon with MLX."
requires-python = ">=3.12"
dependencies = [
    "mlx",
    "mlx-transformers",
    "python-dotenv",
    "pandas",
    "streamlit",
    "transformers",
]

[dependency-groups]
dev = ["pytest", "ruff", "ty"]
convert = ["safetensors", "torch"]

[tool.uv]
override-dependencies = ["streamlit>=1.58.0,<2.0"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length is owned by `ruff format`

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
